--- a/src/templates/pdf/report/003_base_indicators.j2
+++ b/src/templates/pdf/report/003_base_indicators.j2
@@ -89,7 +89,9 @@
                 <p>Обратите внимание на объем продаж товара-середнячка и конкуренцию. Объем продаж скажет какой оборот можно получить на одной позиции. Конкуренция – насколько сложно будет добиться этого оборота, потеснив другие бренды. Если объем продаж одной позиции кажется вам слишком маленьким, подумайте над расширением ассортимента.</p>
             </div>
 
-            {% include 'blocks/copyright.j2' %}
+            <div class="right-footer">
+                {% include 'blocks/copyright.j2' %}
+            </div>
         </div>
     </div>
 </div>
