--- a/src/templates/pdf/report/004_sales_distribution.j2
+++ b/src/templates/pdf/report/004_sales_distribution.j2
@@ -21,7 +21,9 @@
                 <p>Осторожно относитесь к категориям со слишком высокими продажами всех товаров. Бывает, что в категории продаются только очень дешевые товары с низкой маржинальностью – заработать на таких сложно. В этом случае внимательно изучите отчет по ценовым сегментам.</p>
             </div>
 
-            {% include 'blocks/copyright.j2' %}
+            <div class="right-footer">
+                {% include 'blocks/copyright.j2' %}
+            </div>
         </div>
     </div>
 </div>
