--- a/src/templates/pdf/report/005_sales_distribution_chart.j2
+++ b/src/templates/pdf/report/005_sales_distribution_chart.j2
@@ -146,7 +146,9 @@
                 <p>Не всегда самая низкая цена гарантирует отличные продажи — будьте к этому готовы. Часто покупатели предпочитают более качественные товары по более высокой цене – можно этим воспользоваться.</p>
             </div>
 
-            {% include 'blocks/copyright.j2' %}
+            <div class="right-footer">
+                {% include 'blocks/copyright.j2' %}
+            </div>
         </div>
     </div>
 </div>
