--- a/src/templates/pdf/report/006_brand_countries_chart.j2
+++ b/src/templates/pdf/report/006_brand_countries_chart.j2
@@ -31,31 +31,31 @@
                         <div class="col">
                             <div class="bar" style="height:95%;">
                                 <div class="value">550</div>
-                                <div class="col-label"><img border="0"  src="images/ru.png" alt title> <span>Россия</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/ru.png" alt title> <span>Россия</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:80%;">
                                 <div class="value">800</div>
-                                <div class="col-label"><img border="0"  src="images/be.png" alt title> <span>Белорусь</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/br.png" alt title> <span>Белорусь</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:30%;">
                                 <div class="value">300</div>
-                                <div class="col-label"><img border="0"  src="images/gr.png" alt title> <span>Греция</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/gr.png" alt title> <span>Греция</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:9%;">
                                 <div class="value">90</div>
-                                <div class="col-label"><img border="0"  src="images/tur.png" alt title> <span>Турция</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/tr.png" alt title> <span>Турция</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:56%;">
                                 <div class="value">359</div>
-                                <div class="col-label"><img border="0"  src="images/it.png" alt title> <span>Италия</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/it.png" alt title> <span>Италия</span></div>
                             </div>
                         </div>
                         <div class="col">
@@ -98,31 +98,31 @@
                         <div class="col">
                             <div class="bar" style="height:95%;">
                                 <div class="value">550</div>
-                                <div class="col-label"><img border="0"  src="images/ru.png" alt title> <span>Россия</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/ru.png" alt title> <span>Россия</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:80%;">
                                 <div class="value">800</div>
-                                <div class="col-label"><img border="0"  src="images/be.png" alt title> <span>Белорусь</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/br.png" alt title> <span>Белорусь</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:30%;">
                                 <div class="value">300</div>
-                                <div class="col-label"><img border="0"  src="images/gr.png" alt title> <span>Греция</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/gr.png" alt title> <span>Греция</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:9%;">
                                 <div class="value">90</div>
-                                <div class="col-label"><img border="0"  src="images/tur.png" alt title> <span>Турция</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/tr.png" alt title> <span>Турция</span></div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="bar" style="height:56%;">
                                 <div class="value">359</div>
-                                <div class="col-label"><img border="0"  src="images/it.png" alt title> <span>Италия</span></div>
+                                <div class="col-label"><img border="0"  src="images/flags/it.png" alt title> <span>Италия</span></div>
                             </div>
                         </div>
                         <div class="col">
