--- a/src/templates/pdf/report/008_popular_brands_chart.j2
+++ b/src/templates/pdf/report/008_popular_brands_chart.j2
@@ -20,7 +20,9 @@
                 <p>Не забудьте посмотреть на товары этих продавцов. Их ассортимент может многое рассказать о том, какие товары пользуются спросом, а какие – нет.</p>
             </div>
 
-            {% include 'blocks/copyright.j2' %}
+            <div class="right-footer">
+                {% include 'blocks/copyright.j2' %}
+            </div>
         </div>
     </div>
 </div>
