--- a/src/templates/pdf/report/017_neighbours_list.j2
+++ b/src/templates/pdf/report/017_neighbours_list.j2
@@ -72,5 +72,7 @@
             </tbody>
         </table>
     </div>
-    {% include 'blocks/copyright.j2' %}
+    <div class="left-footer">
+        {% include 'blocks/copyright.j2' %}
+    </div>
 </div>
