--- a/src/templates/pdf/report/010_best_goods_info.j2
+++ b/src/templates/pdf/report/010_best_goods_info.j2
@@ -17,5 +17,7 @@
                 </div>
             </div>
 
-            {% include 'blocks/copyright.j2' %}
+            <div class="left-footer">
+                {% include 'blocks/copyright.j2' %}
+            </div>
         </div>
