--- a/src/templates/pdf/report/015_best_goods_overview_list.j2
+++ b/src/templates/pdf/report/015_best_goods_overview_list.j2
@@ -8,25 +8,25 @@
                     <td width="20%" class="table-compare-photo"></td>
                     <td width="20%" class="table-compare-photo">
                         <div>
-                            <img src="images/t1.png" class="table-compare-icon">
+                            <img src="images/compare-icons-1.png" class="table-compare-icon">
                             <a href="{{ goods_overview.expensive.url }}"><img src="{{ goods_overview.expensive.logo }}" alt="{{ goods_overview.expensive.name }}"></a>
                         </div>
                     </td>
                     <td width="20%" class="table-compare-photo">
                         <div>
-                            <img src="images/t2.png" class="table-compare-icon">
+                            <img src="images/compare-icons-2.png" class="table-compare-icon">
                             <a href="{{ goods_overview.cheap.url }}"><img src="{{ goods_overview.cheap.logo }}" alt="{{ goods_overview.cheap.name }}"></a>
                         </div>
                     </td>
                     <td width="20%" class="table-compare-photo">
                         <div>
-                            <img src="images/t3.png" class="table-compare-icon">
+                            <img src="images/compare-icons-3.png" class="table-compare-icon">
                             <a href="{{ goods_overview.old.url }}"><img src="{{ goods_overview.old.logo }}" alt="{{ goods_overview.old.name }}"></a>
                         </div>
                     </td>
                     <td width="20%" class="table-compare-photo">
                         <div>
-                            <img src="images/t4.png" class="table-compare-icon">
+                            <img src="images/compare-icons-4.png" class="table-compare-icon">
                             <a href="{{ goods_overview.bad.url }}"><img src="{{ goods_overview.bad.logo }}" alt="{{ goods_overview.bad.name }}"></a>
                         </div>
                     </td>
@@ -84,5 +84,8 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div class="left-footer">
+        {% include 'blocks/copyright.j2' %}
     </div>
 </div>
