--- a/src/templates/pdf/report/016_neighbours_info.j2
+++ b/src/templates/pdf/report/016_neighbours_info.j2
@@ -16,5 +16,7 @@
         </div>
     </div>
 
-    {% include 'blocks/copyright.j2' %}
+    <div class="left-footer">
+        {% include 'blocks/copyright.j2' %}
+    </div>
 </div>
