--- a/src/templates/pdf/report/018_vocabulary.j2
+++ b/src/templates/pdf/report/018_vocabulary.j2
@@ -23,5 +23,7 @@
         </div>
     </div>
 
-    {% include 'blocks/copyright.j2' %}
+    <div class="left-footer">
+        {% include 'blocks/copyright.j2' %}
+    </div>
 </div>
