Added sales distributions charts

--- a/src/templates/pdf/report/005_sales_distribution_chart.j2
+++ b/src/templates/pdf/report/005_sales_distribution_chart.j2
@@ -6,65 +6,26 @@
 
                 <div class="canvas">
                     <div class="rows">
-                        <div class="axis-name"><span>Количество артикулов</span></div>
+                        <div class="axis-name"><span>{{ sales_distribution_skus_chart.y_axis_name }}</span></div>
+                        <div class="axis-zero row-label">0</div>
+
+                        {% for row in sales_distribution_skus_chart.rows %}
                         <div class="row">
-                            <div class="row-label">600 <span>млн. руб.</span></div>
+                            <div class="row-label">{{ row.number }} <span>{{ row.digits }}</span></div>
                         </div>
-                        <div class="row">
-                            <div class="row-label">500 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">300 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">200 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">100 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">0</div>
-                        </div>
+                        {% endfor %}
                     </div>
 
                     <div class="columns">
-                        <div class="axis-name">Цена</div>
-                        <div class="col">
-                            <div class="bar" style="height:95%;">
-                                <div class="value">550</div>
-                                <div class="col-label">0 – 1 <span>тыс. руб.</span></div>
+                        <div class="axis-name">{{ sales_distribution_skus_chart.x_axis_name }}</div>
+                        {% for col in  sales_distribution_skus_chart.bars %}
+                            <div class="col">
+                                <div class="bar" style="height:{{ col.height }}%;">
+                                    <div class="value">{{ col.v.number }} <span>{{ col.v.digits }}</span></div>
+                                    <div class="col-label"><span>{{ col.bin }}</span></div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:80%;">
-                                <div class="value">800</div>
-                                <div class="col-label">1 – 2 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:30%;">
-                                <div class="value">300</div>
-                                <div class="col-label">2 – 3 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:9%;">
-                                <div class="value">90</div>
-                                <div class="col-label">3 – 4 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:56%;">
-                                <div class="value">359</div>
-                                <div class="col-label">4 – 5 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:10%;">
-                                <div class="value">100</div>
-                                <div class="col-label">5+ <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -74,65 +35,26 @@
 
                 <div class="canvas">
                     <div class="rows">
-                        <div class="axis-name"><span>Оборот</span></div>
+                        <div class="axis-name"><span>{{ sales_distribution_turnover_chart.y_axis_name }}</span></div>
+                        <div class="axis-zero row-label">0</div>
+
+                        {% for row in sales_distribution_turnover_chart.rows %}
                         <div class="row">
-                            <div class="row-label">600 <span>млн. руб.</span></div>
+                            <div class="row-label">{{ row.number }} <span>{{ row.digits }}</span></div>
                         </div>
-                        <div class="row">
-                            <div class="row-label">500 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">300 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">200 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">100 <span>млн. руб.</span></div>
-                        </div>
-                        <div class="row">
-                            <div class="row-label">0</div>
-                        </div>
+                        {% endfor %}
                     </div>
 
                     <div class="columns">
-                        <div class="axis-name">Цена</div>
-                        <div class="col">
-                            <div class="bar" style="height:95%;">
-                                <div class="value">550</div>
-                                <div class="col-label">0 – 1 <span>тыс. руб.</span></div>
+                        <div class="axis-name">{{ sales_distribution_turnover_chart.x_axis_name }}</div>
+                        {% for col in  sales_distribution_turnover_chart.bars %}
+                            <div class="col">
+                                <div class="bar" style="height:{{ col.height }}%;">
+                                    <div class="value">{{ col.v.number }} <span>{{ col.v.digits }}</span></div>
+                                    <div class="col-label"><span>{{ col.bin }}</span></div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:80%;">
-                                <div class="value">800</div>
-                                <div class="col-label">1 – 2 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:30%;">
-                                <div class="value">300</div>
-                                <div class="col-label">2 – 3 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:9%;">
-                                <div class="value">90</div>
-                                <div class="col-label">3 – 4 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:56%;">
-                                <div class="value">359</div>
-                                <div class="col-label">4 – 5 <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="bar" style="height:10%;">
-                                <div class="value">100</div>
-                                <div class="col-label">5+ <span>тыс. руб.</span></div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
