Switched off inactive pages

--- a/src/templates/pdf/report/_index.j2
+++ b/src/templates/pdf/report/_index.j2
@@ -22,7 +22,7 @@
 
         {% include '007_popular_brands_list.j2' %}
 
-        {% include '008_popular_brands_chart.j2' %}
+        {# include '008_popular_brands_chart.j2' #}
 
 		{% include '009_rating_distribution.j2' %}
 
@@ -38,9 +38,9 @@
 
         {% include '015_best_goods_overview_list.j2' %}
 
-        {% include '016_neighbours_info.j2' %}
+        {# include '016_neighbours_info.j2' #}
 
-        {% include '017_neighbours_list.j2' %}
+        {# include '017_neighbours_list.j2' #}
 
         {% include '018_vocabulary.j2' %}
 	</div>
