Added telegram user name in report

--- a/src/templates/pdf/report/001_cover.j2
+++ b/src/templates/pdf/report/001_cover.j2
@@ -11,7 +11,7 @@
             <img src="images/rock.png" alt="V">
             <div class="text">
                 <div class="primary">Анализируйте и находите прибыльные товары для продажи на Wildberries</div>
-                <div class="secondary">Отчет подготовлен для Егор ботом <a href="http://t.me/wildsearch_bot">Wild Search</a> {{ base_current_date }} года<br>Бот разработан в <a href="https://wondersell.ru">Wondersell</a></div>
+                <div class="secondary">Отчет подготовлен ботом <a href="http://t.me/wildsearch_bot">Wild Search</a> {{ base_current_date }} года<br>Бот разработан в <a href="https://wondersell.ru">Wondersell</a></div>
             </div>
         </div>
     </div>
