--- a/src/templates/pdf/report/002_intro.j2
+++ b/src/templates/pdf/report/002_intro.j2
@@ -1,6 +1,6 @@
 <div class="page">
     <div class="container">
-        <h2><strong>Привет,</strong><br/>Егор <img src="images/cool.png" alt="8)"></span></h2>
+        <h2><strong>Привет,</strong><br/>{{ base_username }} <img src="images/cool.png" alt="8)"></span></h2>
 
         <div class="column">
             <div class="longread">
