Bar labels in charts finished

--- a/src/templates/pdf/report/006_brand_countries_chart.j2
+++ b/src/templates/pdf/report/006_brand_countries_chart.j2
@@ -21,7 +21,7 @@
                             <div class="col">
                                 <div class="bar" style="height:{{ col.height }}%;">
                                     <div class="value">{{ col.v.number }} <span>{{ col.v.digits }}</span></div>
-                                    <div class="col-label"><img src="images/flags/{{ col.country_code }}.png"><span>{{ col.bin }}</span></div>
+                                    <div class="col-label"><img src="images/flags/{{ col.country_code }}.png"><span>{{ col.bin_text }}</span></div>
                                 </div>
                             </div>
                         {% endfor %}
@@ -49,7 +49,7 @@
                             <div class="col">
                                 <div class="bar" style="height:{{ col.height }}%;">
                                     <div class="value">{{ col.v.number }} <span>{{ col.v.digits }}</span></div>
-                                    <div class="col-label"><img src="images/flags/{{ col.country_code }}.png"><span>{{ col.bin }}</span></div>
+                                    <div class="col-label"><img src="images/flags/{{ col.country_code }}.png"><span>{{ col.bin_text }}</span></div>
                                 </div>
                             </div>
                         {% endfor %}
