--- a/src/templates/pdf/report/005_sales_distribution_chart.j2
+++ b/src/templates/pdf/report/005_sales_distribution_chart.j2
@@ -22,7 +22,7 @@
                             <div class="col">
                                 <div class="bar" style="height:{{ col.height }}%;">
                                     <div class="value">{{ col.v.number }} <span>{{ col.v.digits }}</span></div>
-                                    <div class="col-label"><span>{{ col.bin }}</span></div>
+                                    <div class="col-label">{{ col.bin.text }} <span>{{ col.bin.digits }} {{ col.bin.units }}</span></div>
                                 </div>
                             </div>
                         {% endfor %}
@@ -51,7 +51,7 @@
                             <div class="col">
                                 <div class="bar" style="height:{{ col.height }}%;">
                                     <div class="value">{{ col.v.number }} <span>{{ col.v.digits }}</span></div>
-                                    <div class="col-label"><span>{{ col.bin }}</span></div>
+                                    <div class="col-label">{{ col.bin.text }} <span>{{ col.bin.digits }} {{ col.bin.units }}</span></div>
                                 </div>
                             </div>
                         {% endfor %}
