Fixed best goods prices display

--- a/src/templates/pdf/report/015_best_goods_overview_list.j2
+++ b/src/templates/pdf/report/015_best_goods_overview_list.j2
@@ -40,10 +40,10 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.expensive.price }} <span>руб.</span></div></td>
-                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.cheap.price }} <span>руб.</span></div></td>
-                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.old.price }} <span>руб.</span></div></td>
-                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.bad.price }} <span>руб.</span></div></td>
+                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.expensive.price.number }} <span>{{ goods_overview.expensive.price.units }}</span></div></td>
+                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.cheap.price.number }} <span>{{ goods_overview.cheap.price.units }}</span></div></td>
+                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.old.price.number }} <span>{{ goods_overview.old.price.units }}</span></div></td>
+                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.bad.price.number }} <span>{{ goods_overview.bad.price.units }}</span></div></td>
                 </tr>
                 <tr>
                     <td></td>
