Wrong indicators in best goods table fixed

--- a/src/templates/pdf/report/015_best_goods_overview_list.j2
+++ b/src/templates/pdf/report/015_best_goods_overview_list.j2
@@ -59,14 +59,14 @@
                     <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.expensive.purchases.number }} <span>{{ goods_overview.expensive.purchases.digits }} {{ goods_overview.expensive.purchases.units }}</span></div></td>
                     <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.cheap.purchases.number }} <span>{{ goods_overview.cheap.purchases.digits }} {{ goods_overview.cheap.purchases.units }}</span></div></td>
                     <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.old.purchases.number }} <span>{{ goods_overview.old.purchases.digits }} {{ goods_overview.old.purchases.units }}</span></div></td>
-                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.old.purchases.number }} <span>{{ goods_overview.old.purchases.digits }} {{ goods_overview.old.purchases.units }}</span></div></td>
+                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.bad.purchases.number }} <span>{{ goods_overview.bad.purchases.digits }} {{ goods_overview.bad.purchases.units }}</span></div></td>
                 </tr>
                 <tr>
                     <td>Продаж всего</td>
                     <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.expensive.turnover.number }} <span>{{ goods_overview.expensive.turnover.digits }} {{ goods_overview.expensive.turnover.units }}</span></div></td>
                     <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.cheap.turnover.number }} <span>{{ goods_overview.cheap.turnover.digits }} {{ goods_overview.cheap.turnover.units }}</span></div></td>
                     <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.old.turnover.number }} <span>{{ goods_overview.old.turnover.digits }} {{ goods_overview.old.turnover.units }}</span></div></td>
-                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.old.turnover.number }} <span>{{ goods_overview.old.turnover.digits }} {{ goods_overview.old.turnover.units }}</span></div></td>
+                    <td class="table-parameter"><div class="table-parameter-value">{{ goods_overview.bad.turnover.number }} <span>{{ goods_overview.bad.turnover.digits }} {{ goods_overview.bad.turnover.units }}</span></div></td>
                 </tr>
                 <tr>
                     <td>Первый отзыв</td>
