Altered bot text messages

--- a/src/templates/pdf/report/014_best_goods_list_4.j2
+++ b/src/templates/pdf/report/014_best_goods_list_4.j2
@@ -1,6 +1,6 @@
 <div class="page">
     <div class="container">
-        <h2>Лучшие по обороту за все время (в рублях)</h2>
+        <h2>Лучшие по обороту за месяц (в рублях)</h2>
 
         <table class="table-data table-medals">
             <thead>
