Altered production country text in report

--- a/src/templates/pdf/report/006_brand_countries_chart.j2
+++ b/src/templates/pdf/report/006_brand_countries_chart.j2
@@ -35,7 +35,7 @@
 
             <div class="callout-box">
                 <p>Если в категории хорошо продаются зарубежные товары, оцените возможность их производства у себя – возможно, это будет дешевле закупки за рубежом.</p>
-                <p>Вы можете заказать расширенный отчет с зависимостью продаж от страны бренда и производства, чтобы узнать: в каких странах производятся лучшие товары и каким странам доверяют покупатели.</p>
+                <p>Вы можете заказать расширенный отчет с зависимостью продаж от страны производства, чтобы узнать: в каких странах производятся лучшие товары и каким странам доверяют покупатели.</p>
             </div>
 
             {% include 'blocks/copyright.j2' %}
